@@ -43,6 +43,7 @@ Release 0.20.1 - Unreleased
    HBASE-1684  Backup (Export/Import) contrib tool for 0.20
    HBASE-1854  Remove the Region Historian
    HBASE-1860  Change HTablePool#createHTable from private to protected
+   HBASE-48    Bulk load tools
 
 Release 0.20.0 - Tue Sep  8 12:48:41 PDT 2009
 
